Fix overflow groupMenu

--- a/css/groupsView/groupSection.css
+++ b/css/groupsView/groupSection.css
@@ -1,14 +1,11 @@
 #groups-section {
     padding: 1rem;
-    height: 100vh;
+    height: var(--main-height);
     flex-shrink: 0;
 
     box-sizing: border-box;
+    overflow: auto;
     transition: .5s;
-}
-
-#groups-section.slide-up {
-    transform: translateY(-100vh);
 }
 
 .group-container {
