--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 	--highlight-yellow: #ddc917;
 
 	--header-height: 110px;
+	--main-height: calc(100vh - var(--header-height));
 }
 
 body {
@@ -48,4 +49,8 @@ button, input {
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
+}
+
+.slide-up {
+    transform: translateY(calc(var(--main-height) * -1 ));
 }
